--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         <p id="links">Grant/Scholarship Information</p></div>
     <div class="text-11"><p id="links">Program Information Sheet</p><p style="text-decoration: line-through;" id="links">Calendar</p></div>
     <div class="text-12"><h2>2021-22 Information</h2></div>
-    <div class="text-13"><p>Program Information & Certification Sheet</p>
-        <p>Calendar</p>
-        <p>Student Handbook</p></div>
+    <div class="text-13"><p id="links-2">Program Information & Certification Sheet</p>
+        <p id="links-2">Calendar</p>
+        <p id="links-2">Student Handbook</p></div>
     </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
